--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 astropy
 astroquery
-numpy
+numpy==1.26.4
 lightkurve
 requests
 pandas
@@ -8,3 +8,4 @@ matplotlib
 scipy
 selenium
 bs4
+webdriver_manager
