--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,14 +1,18 @@
-astropy
-astroquery
-numpy==1.26.4
-lightkurve
-requests
-pandas
-matplotlib
-scipy
-selenium
-bs4
-webdriver_manager
+astropy==6.1.4
+astroquery==0.4.7
+beautifulsoup4==4.12.3
+charset_normalizer==3.4.0
+lightkurve==2.5.0
+matplotlib==3.9.2
+numpy==2.1.3
+pandas==2.2.3
+Requests==2.32.3
+scipy==1.14.1
+selenium==4.26.0
+tqdm==4.66.5
+trio==0.27.0
+typing_extensions==4.12.2
+webdriver_manager==4.0.2
 
 pytest
 pytest-cov
