--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pytest --basetemp={envtmpdir}
+allowlist_externals = pytest
 
 [testenv:flake8]
 basepython = python3.10
