New Minima and Boundary classes introduced. O-C is available.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ description = Observed CalculaTed diagrAm aNd lightcurveS
 long_description = file: README.md
 long_description_content_type = text/markdown
 version = 0.0.1 Beta
-author = Mohammad S.Niaei
-author_email = m.shemuni@gmail.com
+author = Mohammad S.Niaei, Özgür BAŞTÜRK
+author_email = m.shemuni@gmail.com, obasturk@ankara.edu.tr
 keywords = Observed-Calculated, Lightcurve
 license = GNU/GPL V3
 license_files = LICENSE
@@ -25,6 +25,19 @@ packages =
 install_requires =
     astropy
     astroquery
+    beautifulsoup4
+    charset_normalizer
+    lightkurve
+    matplotlib
+    numpy
+    pandas
+    Requests
+    scipy
+    selenium
+    tqdm
+    trio
+    typing_extensions
+    webdriver_manager
 python_requires = >=3.8
 package_dir =
     =src
